# wildfly-container-versions

./: .gitignore  CLAUDE.md  Cargo.toml  ISSUES.md  README.md  release.sh
.github/workflows/: release.yml  verify.yml
src/: lib.rs
