[package]
name = "wildfly_container_versions"
version = "39.0.1-2"
authors = ["Harald Pehl <harald.pehl@gmail.com>"]
edition = "2021"
description = "A library for WildFly container versions"
readme = "README.md"
homepage = "https://github.com/hpehl/wildfly-container-versions"
repository = "https://github.com/hpehl/wildfly-container-versions"
license = "Apache-2.0"
keywords = ["WildFly", "container", "version"]

[dependencies]
anyhow = "1.0.100"
lazy_static = "1.5.0"
regex = "1.12.2"
semver = "1.0.27"

[lib]
name = "wildfly_container_versions"
path = "src/lib.rs"
